--- a/inventory-service/build.gradle
+++ b/inventory-service/build.gradle
@@ -15,6 +15,17 @@ configurations {
 
 repositories {
     mavenCentral()
+    maven { url 'https://artifactory-oss.prod.netflix.net/artifactory/maven-oss-candidates' }
+}
+
+ext {
+    set('springCloudVersion', "2022.0.0")
+}
+
+dependencyManagement {
+    imports {
+        mavenBom("org.springframework.cloud:spring-cloud-dependencies:${property("springCloudVersion")}")
+    }
 }
 
 dependencies {
@@ -24,7 +35,10 @@ dependencies {
     runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation("org.springframework.cloud:spring-cloud-starter-netflix-eureka-client")
 }
+
+
 
 tasks.named('test') {
     useJUnitPlatform()
