--- a/inventory-service/src/main/resources/application.yml
+++ b/inventory-service/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  application:
+    name: inventory-service
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://localhost:3306/inventory-service
@@ -7,5 +9,12 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create-drop
+
 server:
   port: 9097
+eureka:
+  client:
+    registerWithEureka: true
+    fetchRegistry: true
+    service-url:
+      defaultZone: http://localhost:9098/eureka/
