--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  application:
+    name: order-service
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://localhost:3306/order-service
@@ -11,3 +13,10 @@ server:
   port: 9096
 
 inventory-url: "http://localhost:9097/api/inventory"
+
+eureka:
+  client:
+    registerWithEureka: true
+    fetchRegistry: true
+    service-url:
+      defaultZone: http://localhost:9098/eureka/
