--- a/product-service/build.gradle
+++ b/product-service/build.gradle
@@ -15,7 +15,13 @@ configurations {
 
 repositories {
     mavenCentral()
+    maven { url 'https://artifactory-oss.prod.netflix.net/artifactory/maven-oss-candidates' }
 }
+
+ext {
+    set('springCloudVersion', "2022.0.0")
+}
+
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
@@ -26,7 +32,15 @@ dependencies {
     testImplementation 'org.testcontainers:testcontainers:1.16.3'
     testImplementation 'org.testcontainers:mongodb:1.16.3'
     testImplementation 'org.testcontainers:junit-jupiter:1.16.3'
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 }
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
+}
+
 
 tasks.named('test') {
     useJUnitPlatform()
