--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
 server:
   port: 9096
 
-inventory-url: "http://localhost:9097/api/inventory"
+inventory-url: "http://inventory-service/api/inventory"
 
 eureka:
   client:
