--- a/api-gateway/build.gradle
+++ b/api-gateway/build.gradle
@@ -4,12 +4,13 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.0'
 }
 
-group = 'org.example'
+group 'org.example'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
 
 repositories {
 	mavenCentral()
+	maven { url 'https://artifactory-oss.prod.netflix.net/artifactory/maven-oss-candidates' }
 }
 
 ext {
@@ -19,6 +20,7 @@ ext {
 dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation("org.springframework.cloud:spring-cloud-starter-netflix-eureka-client")
 }
 
 dependencyManagement {
